--- a/package.json
+++ b/package.json
@@ -53,9 +53,7 @@
     "glob": "^7.1.3",
     "webpack": "^4.44.1",
     "mkdirp": "^1.0.4",
-    "nopt": "^5.0.0"
-  },
-  "devDependencies": {
+    "nopt": "^5.0.0",
     "benchmark": "^2.1.4",
     "codemirror": "^5.56.0",
     "jquery": "^3.5.1",
