--- a/package.json
+++ b/package.json
@@ -1,68 +1,74 @@
 {
-  "name": "js-beautify",
-  "version": "1.13.0",
-  "description": "beautifier.io for node",
-  "main": "js/index.js",
-  "bin": {
-    "css-beautify": "./js/bin/css-beautify.js",
-    "html-beautify": "./js/bin/html-beautify.js",
-    "js-beautify": "./js/bin/js-beautify.js"
-  },
-  "directories": {
-    "lib": "js/lib",
-    "test": "js/test"
-  },
-  "files": [
-    "js/bin/",
-    "js/lib/*.js",
-    "js/lib/unpackers/",
-    "js/index.js",
-    "js/src/**/*"
-  ],
-  "scripts": {},
-  "bugs": "https://github.com/beautify-web/js-beautify/issues",
-  "homepage": "https://beautifier.io/",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/beautify-web/js-beautify.git"
+  "name": "@smallwei/avue",
+  "version": "2.10.5",
+  "description": "A Magic Configurable Web Framework",
+  "main": "lib/avue.min.js",
+  "unpkg": "lib/avue.min.js",
+  "jsdelivr": "lib/avue.min.js",
+  "scripts": {
+    "bootstrap": "yarn --registry https://registry.npm.taobao.org || npm install --registry https://registry.npm.taobao.org ",
+    "gen:version": "node build/version.js",
+    "analyz": "NODE_ENV=production npm_config_report=true npm run build",
+    "dev": "yarn gen:version && cross-env TARGET=dev UINAME=element-ui gulp watch",
+    "build": "yarn gen:version && cross-env TARGET=prod UINAME=element-ui gulp build",
+    "all": "yarn build && yarn dev"
   },
   "keywords": [
-    "beautify",
-    "beautifier",
-    "code-quality"
+    "vue",
+    "element-ui",
+    "avue"
   ],
-  "author": "Einar Lielmanis <einar@beautifier.io>",
-  "contributors": [
-    "Vital Batmanov <vital76@gmail.com>",
-    "Chris J. Shull <chrisjshull@gmail.com>",
-    "Gian Marco Gherardi <gianmarco.gherardi@gmail.com>",
-    "Stan <stasson@orc.ru>",
-    "Vittorio Gambaletta <VittGam@vittgam.net>",
-    "Daniel Stockman <daniel.stockman@gmail.com>",
-    "Harutyun Amirjanyan <amirjanyan@gmail.com>",
-    "Nochum Sossonko <nsossonko@hotmail.com>",
-    "Liam Newman <bitwiseman@beautifier.io>"
-  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://gitee.com/smallweigit/avue.git"
+  },
+  "author": "smallwei",
   "license": "MIT",
-  "engines": {
-    "node": ">=10"
+  "bugs": {
+    "url": "https://gitee.com/smallweigit/avue/issues"
+  },
+  "homepage": "https://gitee.com/smallweigit/avue/blob/master/README.md",
+  "devDependencies": {
+    
+  },
+  "peerDependencies": {
+    "axios": "^0.21.1",
+    "element-ui": "^2.15.10",
+    "vue": "2.7.10"
   },
   "dependencies": {
-    "config-chain": "^1.1.12",
-    "editorconfig": "^0.15.3",
-    "glob": "^7.1.3",
-    "webpack": "^4.44.1",
-    "mkdirp": "^1.0.4",
-    "nopt": "^5.0.0",
-    "benchmark": "^2.1.4",
-    "codemirror": "^5.56.0",
-    "jquery": "^3.5.1",
-    "jshint": "^2.12.0",
-    "minimist": ">=1.2.5",
-    "mocha": "^8.1.1",
-    "mustache": "^4.0.1",
-    "serve": "^11.3.2",
-    "requirejs": "^2.3.6",
-    "webpack-cli": "^3.3.12"
-  }
+    "countup.js": "^1.9.3",
+    "dayjs": "^1.10.4",
+    "nprogress": "^0.2.0",
+    "vue-cropper": "^0.5.8",
+	"axios": "^0.21.1",
+    "@babel/core": "^7.13.14",
+    "@babel/preset-env": "^7.13.12",
+    "babel-loader": "^8.2.2",
+    "cross-env": "^3.1.3",
+    "css-loader": "^5.2.0",
+    "element-ui": "^2.15.10",
+    "eslint": "4.14.0",
+    "eslint-config-elemefe": "0.1.1",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-html": "^4.0.1",
+    "eslint-plugin-json": "^1.2.0",
+    "gulp": "^4.0.0",
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-cssmin": "^0.1.7",
+    "gulp-postcss": "^6.1.1",
+    "gulp-sass": "^5.1.0",
+    "progress-bar-webpack-plugin": "^1.11.0",
+    "sass": "^1.54.5",
+    "vue": "2.7.10",
+    "vue-loader": "^15.9.6",
+    "webpack": "^4.27.0",
+    "webpack-bundle-analyzer": "^3.0.3",
+    "webpack-merge": "^4.1.4"
+  },
+  "files": [
+    "lib",
+    "README.md",
+    "LICENSE"
+  ]
 }
